After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703386 - Fade out doesn't work if user hits cancel once before logging in.
Fade out doesn't work if user hits cancel once before logging in.
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2013-07-01 12:07 UTC by Ray Strode [halfline]
Modified: 2013-07-01 12:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
session: don't close outside connections during session reset (5.17 KB, patch)
2013-07-01 12:07 UTC, Ray Strode [halfline]
committed Details | Review
slave: don't assume autologin if there are no connections (3.05 KB, patch)
2013-07-01 12:07 UTC, Ray Strode [halfline]
committed Details | Review

Description Ray Strode [halfline] 2013-07-01 12:07:32 UTC
If a user at the login screen hits cancel, then logs in successfully,
they'll end up skipping at least part of the fade out.
Comment 1 Ray Strode [halfline] 2013-07-01 12:07:33 UTC
Created attachment 248128 [details] [review]
session: don't close outside connections during session reset

If a user clicks cancel in the login screen the underlying
user verification session gets reset, which causes the greeter
connection to get scrubbed from the record.

Resetting is correct, but scrubbing the connection isn't.

The bug manifests itself at login time, by the greeter not fading
out if the user hit cancel once before logging in.  Instead, the
greeter gets kill right away and login proceeds abruptly.

This commit makes gdm_session_reset not erreoneously do this connection
scrubbing.
Comment 2 Ray Strode [halfline] 2013-07-01 12:07:36 UTC
Created attachment 248129 [details] [review]
slave: don't assume autologin if there are no connections

Because of a bug in gdm-session.c (which was dealt with in
the previous commit) we ended up with a false impression of currently
connected clients after a session reset happens.

That bug meant the slave assumed autologin was enabled which
stopped it from waiting for the greeter to finish the fade out before
proceeding.

Assuming "no connection" == "autologin" is a bit fragile, so this
commit makes sure to check for gdm-autologin specifically.
Comment 3 Ray Strode [halfline] 2013-07-01 12:11:03 UTC
(pushing since I don't think I'll get a reviewer on these, but if someone wants to take a look, I'd appreciate it)

Attachment 248128 [details] pushed as cc2e401 - session: don't close outside connections during session reset
Attachment 248129 [details] pushed as 20a1eee - slave: don't assume autologin if there are no connections